Tmp/merge main to cct 1981 (#99)
* SNI-6767 fix

Change-Id: If5fd423538427108c77eec81c9d621138b05e3fc

* updating poms for 17.0.17 branch with snapshot versions

* updating poms for 17.0.18-SNAPSHOT development

* updating poms for branch'dev/release-17.0.17' with non-snapshot versions

* updating develop poms to master versions to avoid merge conflicts

* Updating develop poms back to pre merge state

* Initial commit

* config changes for github migration

* Update Dockerfile_listing-service

* updating poms for 17.0.18 branch with snapshot versions

* updating poms for 17.0.19-SNAPSHOT development

* updating poms for branch'dev/release-17.0.18' with non-snapshot versions

* updating develop poms to master versions to avoid merge conflicts

* Updating develop poms back to pre merge state

* Rebase cct-1290 to main

* Rebase cct-1290 to main

* SNI-6844, SNI-6845 prevent duplicate events - DD-34280 Multi day CC hearing split fix (#14)

* SNI-3021:DLQ Analysis_listing.events.hearing-deleted

Change-Id: I9039f4393323da791f886870fdeb4c8acd364866

* SNI-3150:SNI-2952: For exhibit make all the hearingtypes available

Change-Id: I5d76dff129ffd9442c8f9c230f44d6928dc10ccc

* New 8.0.37-RELEASE-3RD.LINE-SNAPSHOT

* SNI-1180: Fixes to startdate and weekendcommencing date fix

Change-Id: I36b327506f1a250ae41573e60a4bc457c72e6052

* CCT-1997 update core-domaini version

Change-Id: I52cbbf5c1d20c620daffb7078ea3ead2b261ec00

* SNI-3208 performance improvemnets, code refatoring and DD-26796 unwanted DB indexes from hearing table are deleted. Re-raised PR

Change-Id: I1329a3b4f7fb56f3028232a2315e77812678a6a1

* Revert "SNI-1180: Fixes to startdate and weekendcommencing date fix"

This reverts commit 2eb591a3bfb490c554ef8c8e1240f2000e5c496f.

Change-Id: If9a67746c152e06e42c4122a64b14152f73ec8cd

* SNI-3447:DLQ failure : listing.events.updated-hearing-in-staging-hmi : count 742

Change-Id: Ib69a8a539c6347fbda39ad5b3d